# sentry-cli

./: .appveyor.yml  .craft.yml  .dockerignore  .editorconfig  .eslintrc  .gitignore  .gitmessage  .mcp.json  .npmignore  .npmrc  .pre-commit-config.yaml  .prettierrc  .sentryclirc  .snyk  .travis.yml  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DART_SYMBOL_MAP_PLAN.md  Dockerfile  IPA_SUPPORT_IMPLEMENTATION.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  README_TEST.md  VERSIONING.md  about.toml  acknowledgements.md  acknowledgements.md.hbs  appveyor.yml  azure-pipelines.yml  build-win.ps1  build.rs  bump-version  clippy.toml  (+25 more)
.cargo/: config.toml
.ci/: build-docker.sh  build.sh  deploy.ps1  deploy.sh  install.sh  move-asset.py  script.sh  upload-release.py
.cursor/rules/: cicd-patterns.mdc  create-prd.mdc  generate-tasks.mdc  javascript-development.mdc  process-task-list.mdc  rule-management.mdc  rust-development.mdc  sentry-cli-project.mdc  testing-guidelines.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 01-feature.yml  02-bug.yml  BUG_REPORT.md  BUG_REPORT.yml  FEATURE_REQUEST.md  QUESTION.md  maintainer-blank.yml
.github/workflows/: AGENTS.md  audit.yml  build.yml  changelog-enforcement.yml  ci.yml  codeql-analysis.yml  danger.yml  license-compliance.yml  lint.yml  release-ghcr-latest-tag.yml  release-ghcr-version-tag.yml  release.yml  rust-toolchain-update.yml  snapshot.yml  stale.yml  swift-test.yml  test-pr-head-sha.yml  test.yml  test_node.yml
.zed/: settings.json
Formula/: sentry-cli.rb
apple-catalog-parsing/: AGENTS.md  Cargo.toml  build.rs
apple-catalog-parsing/src/: asset_catalog.rs  lib.rs
azure-pipelines/: install-rust.yml  prescript-common.yml
crates/sentry-cli-apple/: Cargo.toml  build.rs
docs/: README.md  api_endpoints.absolute-false.yaml  api_endpoints.md  api_endpoints.yaml  api_endpoints_absolute_false.yaml  api_endpoints_absolute_false_list.yaml  breakpad.rst  combined.yaml  configuration.rst  dif.rst  dsym.rst  elf.rst  endpoints.md  index.rst  installation.rst  owners.yaml  pdb.rst  proguard.rst  releases.rst  send-event.rst
docs/snapshots/: 2026-01-29-debug-files-upload-compression.md  2026-01-29-sentry-cli-distribution.md  2026-02-06-sentry-cli-feature-snapshot.md  2026-02-10-sentry-cli-feature-snapshot.md  README.md
dotnet/: .gitignore  Directory.Build.props  NuGet.config  README.md  Sentry.Cli.sln  build.sh
dotnet/Sentry.Cli/: Program.cs  README.md  Sentry.Cli.csproj
dotnet/Sentry.Cli.MSBuild/: DownloadSentryCli.cs  README.md  Sentry.Cli.MSBuild.csproj  SentryCliDownloader.cs
dotnet/Sentry.Cli.MSBuild.Tests/: Sentry.Cli.MSBuild.Tests.csproj  SentryCliDownloaderTests.cs
here/: api__0.json
js/: cli.js  helper.js  index.d.ts  index.js  install.js  logger.js  releases.js  types.ts
js/__tests__/: cli.js  cli.test.js  helper.test.js  index.test.js
js/releases/: index.js
lib/: AGENTS.md  helper.js  helper.ts  index.js  index.ts  logger.ts  types.ts
lib/__mocks__/: sentry-cli
lib/__tests__/: helper.test.js
lib/releases/: index.js  index.ts
lib/sourceMaps/: index.ts
npm-binary-distributions/darwin/: README.md  package.json
npm-binary-distributions/linux-arm/: README.md  package.json
npm-binary-distributions/linux-arm64/: README.md  package.json
npm-binary-distributions/linux-i686/: README.md  package.json
npm-binary-distributions/linux-x64/: package.json
npm-binary-distributions/win32-arm64/: README.md  package.json
npm-binary-distributions/win32-i686/: README.md  package.json
npm-binary-distributions/win32-x64/: README.md  package.json
scripts/: AGENTS.md  build-in-docker.sh  bump-version.sh  customCDNHelper.js  install.js  post-release.sh  test-vercel-nft.js  wheels
snap/: snapcraft.yaml
src/: AGENTS.md  api.rs  bashsupport.sh  codepush.rs  config.rs  constants.rs  errors.rs  event.rs  gradle.rs  lib.rs  macho.rs  macros.rs  main.rs  prelude.rs  sourcemaps.rs  sourcemaputils.rs  utils.rs  vcs.rs  xcode.rs
src/api/: compression.rs  connection_manager.rs  encoding.rs  envelopes_api.rs  mod.rs  pagination.rs  serialization.rs  updating.rs
src/apple/: AssetCatalogReader.swift  safeValueForKey.m
src/commands/: api.rs  bash_hook.rs  debug_files.rs  debug_files_upload.rs  deploys.rs  derive_parser.rs  difutil.rs  difutil_bundle_sources.rs  difutil_check.rs  difutil_find.rs  difutil_id.rs  difutil_uuid.rs  events.rs  files.rs  files_delete.rs  files_list.rs  files_upload.rs  info.rs  issues.rs  login.rs  mod.rs  monitors.rs  projects.rs  react_native.rs  react_native_appcenter.rs  react_native_codepush.rs  react_native_gradle.rs  react_native_xcode.rs  releases.rs  repos.rs  send_apple_crash.rs  send_envelope.rs  send_event.rs  sourcemaps.rs  sourcemaps_upload.rs  uninstall.rs  update.rs  upload_breakpad.rs  upload_dart_symbol_map.rs  upload_dbg.rs  (+3 more)
src/sentrycli/: api.rs  config.rs  constants.rs  error.rs  event.rs  lib.rs  macho.rs  macros.rs  sourcemaps.rs  utils.rs  version.rs
src/utils/: android.rs  appcenter.rs  apple_crash.rs  args.rs  artifacts.rs  auth_token.rs  batch.rs  batching.rs  build_vcs.rs  chunks.rs  ci.rs  codepush.rs  cordova.rs  crashreporting.rs  derive_parser.rs  dif.rs  dif_upload.rs  enc.rs  event.rs  file_search.rs  file_upload.rs  formatting.rs  fs.rs  http.rs  iter.rs  log_transmission.rs  logging.rs  macho.rs  memory_monitor.rs  metrics.rs  mod.rs  non_empty.rs  objectstore.rs  progress.rs  proguard_upload.rs  rcfile.rs  releases.rs  retry.rs  sampling.rs  source_bundle.rs  (+8 more)
tasks/: implementation-logs.md  prd-logs-tail.md  tasks-prd-logs-tail.md
tests/: collections.rs  command_info.rs  command_releases.rs  command_releases_delete.rs  command_releases_finalize.rs  command_releases_info.rs  command_releases_list.rs  command_releases_new.rs  mod.rs
tests/commands/: info.rs  mod.rs  releases.rs  releases_delete.rs  releases_finalize.rs  releases_info.rs  releases_list.rs  releases_new.rs
tools/: setup-commit-hooks.sh  validate-commit-msg.py
(+2064 files in other folders)
