[package]
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
build = "build.rs"
name = "sentry-cli"
version = "2.10.0"
edition = "2018"

[dependencies]
anylog = "0.6.2"
anyhow = { version = "1.0.66", features = ["backtrace"] }
backoff = "0.4.0"
backtrace = "0.3.66"
brotli2 = "0.3.2"
bytecount = "0.6.3"
chardet = "0.2.4"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.22", default-features = false, features = [
  "std",
  "suggestions",
  "wrap_help",
] }
console = "0.15.2"
curl = { version = "0.4.44", features = ["static-curl", "static-ssl"] }
dirs = "4.0.0"
dotenv = "0.15.0"
elementtree = "1.2.2"
encoding = "0.2.33"
flate2 = { version = "1.0.24", default-features = false, features = [
  "rust_backend",
] }
git2 = { version = "0.15.0", default-features = false }
glob = "0.3.0"
if_chain = "1.0.2"
ignore = "0.4.18"
# Do not update due to https://github.com/console-rs/indicatif/issues/317 and https://github.com/getsentry/sentry-cli/pull/1055
indicatif = "0.14.0"
itertools = "0.10.5"
java-properties = "1.4.1"
lazy_static = "1.4.0"
libc = "0.2.135"
log = { version = "0.4.17", features = ["std"] }
might-be-minified = "0.3.0"
open = "3.0.3"
parking_lot = "0.12.1"
percent-encoding = "2.2.0"
plist = "1.3.1"
prettytable-rs = "0.9.0"
proguard = { version = "5.0.0", features = ["uuid"] }
r2d2 = "0.8.10"
rayon = "1.5.3"
regex = "1.6.0"
runas = "0.2.1"
rust-ini = "0.18.0"
semver = "1.0.14"
sentry = { version = "0.27.0", default-features = false, features = [
  "anyhow",
  "curl",
  "contexts",
] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha1_smol = { version = "1.0.0", features = ["serde"] }
sourcemap = { version = "6.2.0", features = ["ram_bundle"] }
symbolic = { version = "10.0.0", features = ["debuginfo-serde", "il2cpp"] }
thiserror = "1.0.37"
url = "2.3.1"
username = "0.2.0"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
walkdir = "2.3.2"
which = "4.3.0"
zip = "0.6.3"

[dev-dependencies]
insta = { version = "1.21.0", features = ["redactions", "yaml"] }
mockito = "0.31.0"
predicates = "2.1.1"
tempfile = "3.3.0"
trycmd = "0.14.1"

[features]
default = []
managed = []
with_crash_reporting = []

[target]

[target."cfg(target_os = \"macos\")"]

[target."cfg(target_os = \"macos\")".dependencies]
mac-process-info = "0.2.0"
osascript = "0.3.0"
unix-daemonize = "0.1.2"

[target."cfg(unix)"]

[target."cfg(unix)".dependencies]
openssl-probe = "0.1.5"
signal-hook = "0.3.14"
crossbeam-channel = "0.5.6"

[target."cfg(windows)"]

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[profile.release]
opt-level = 3
panic = "abort"
