[package]
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
build = "build.rs"
name = "sentry-cli"
version = "2.41.1"
edition = "2021"
rust-version = "1.80"

[dependencies]
anylog = "0.6.3"
anyhow = { version = "1.0.69", features = ["backtrace"] }
backoff = "0.4.0"
backtrace = "0.3.67"
brotli2 = "0.3.2"
bytecount = "0.6.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.1.6", default-features = false, features = [
  "derive",
  "std",
  "suggestions",
  "wrap_help",
  "string",
  "help",
  "usage",
  "error-context",
] }
clap_complete = "4.4.3"
console = "0.15.5"
curl = { version = "0.4.46", features = ["static-curl", "static-ssl"] }
dirs = "4.0.0"
dotenvy = "0.15.7"
elementtree = "1.2.3"
flate2 = { version = "1.0.25", default-features = false, features = [
  "rust_backend",
] }
git2 = { version = "0.18.1", default-features = false }
glob = "0.3.1"
if_chain = "1.0.2"
ignore = "0.4.20"
# Do not update due to https://github.com/console-rs/indicatif/issues/317 and https://github.com/getsentry/sentry-cli/pull/1055
indicatif = "0.14.0"
itertools = "0.10.5"
java-properties = "1.4.1"
lazy_static = "1.4.0"
libc = "0.2.139"
log = { version = "0.4.17", features = ["std"] }
open = "3.2.0"
parking_lot = "0.12.1"
percent-encoding = "2.2.0"
plist = "1.4.0"
prettytable-rs = "0.10.0"
proguard = { version = "5.0.0", features = ["uuid"] }
r2d2 = "0.8.10"
rayon = "1.6.1"
regex = "1.7.3"
runas = "1.0.0"
rust-ini = "0.18.0"
semver = "1.0.16"
sentry = { version = "0.34.0", default-features = false, features = [
  "anyhow",
  "curl",
  "contexts",
  "metrics",
] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha1_smol = { version = "1.0.0", features = ["serde"] }
sourcemap = { version = "9.1.2", features = ["ram_bundle"] }
symbolic = { version = "12.13.3", features = ["debuginfo-serde", "il2cpp"] }
thiserror = "1.0.38"
url = "2.3.1"
username = "0.2.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
walkdir = "2.3.2"
which = "4.4.0"
zip = "0.6.4"
data-encoding = "2.3.3"
magic_string = "0.3.4"
chrono-tz = "0.8.4"
secrecy = "0.8.0"

[dev-dependencies]
assert_cmd = "2.0.11"
insta = { version = "1.26.0", features = ["redactions", "yaml"] }
mockito = "1.6.1"
rstest = "0.18.2"
tempfile = "3.8.1"
trycmd = "0.14.11"

[features]
default = []
managed = []
with_crash_reporting = []

[target]

[target."cfg(target_os = \"macos\")"]

[target."cfg(target_os = \"macos\")".dependencies]
mac-process-info = "0.2.0"

[target."cfg(unix)"]

[target."cfg(unix)".dependencies]
openssl-probe = "0.1.5"

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
winapi = "0.3.9"

# We optimize the release build for size.
[profile.release]
opt-level = 2       # I obtained the smallest binary size with opt-level 2 on my system.
panic = "abort"
strip = "debuginfo" # Only strip debuginfo (not symbols) to keep backtraces useful.
codegen-units = 1   # Parallel compilation prevents some optimizations.
# We do not enable link-time optimizations (lto) because they cause the
# CLI to timeout when run in Xcode Cloud.
