[metadata]
name = sentry_cli
description = A command line utility to work with Sentry.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getsentry/sentry-cli
author = Sentry
author_email = oss@sentry.io
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages =
py_modules =
python_requires = >=3.7
