[metadata]
name = sentry_cli
description = A command line utility to work with Sentry.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getsentry/sentry-cli
author = Sentry
author_email = oss@sentry.io
license = FSL-1.1-MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages =
py_modules =
python_requires = >=3.7
